Manually updated npm dependencies

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://hbs-skeleton.netlify.app/
-title: Hugo Bootstrap Skeleton
+baseURL: https://lipovski.ca
+title: BL Blog
 theme: github.com/razonyang/hugo-theme-bootstrap
-copyright: 'Copyright © 2016-{year} Razon Yang. All Rights Reserved.'
+copyright:
 defaultContentLanguage: en
 # hasCJKLanguage: true # Uncomment it if your content contains Chinese/Japanese/Korean Languages.
 # defaultContentLanguageInSubdir: true
@@ -32,7 +32,7 @@ permalinks:
   blog: /blog/:year/:month/:title/
 
 # module:
-  # proxy: https://goproxy.cn
+#  proxy: https://goproxy.io
 
 # services:
 #   disqus:
