--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://lipovski.ca
+baseURL: https://lipovski.com
 title: BL Blog
 theme: github.com/razonyang/hugo-theme-bootstrap
-copyright:
+copyright: 'Copyright © {year} Benjamin Lipovski. All Rights Reserved.'
 defaultContentLanguage: en
 # hasCJKLanguage: true # Uncomment it if your content contains Chinese/Japanese/Korean Languages.
 # defaultContentLanguageInSubdir: true
@@ -32,7 +32,7 @@ permalinks:
   blog: /blog/:year/:month/:title/
 
 # module:
-#  proxy: https://goproxy.io
+  # proxy: https://goproxy.cn
 
 # services:
 #   disqus:
