--- a/package.json
+++ b/package.json
@@ -43,28 +43,26 @@
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@popperjs/core": "^2.11.2",
     "algoliasearch": "^4.14.2",
+    "autoprefixer": "^10.4.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.29.3",
-    "fuse.js": "^6.6.2",
+    "fuse.js": "^6.5.3",
     "katex": "^0.16.4",
+    "mark.js": "^8.11.1",
     "masonry-layout": "^4.2.2",
     "mermaid": "^10.0.0",
     "mustache": "^4.2.0",
     "onchange": "^7.1.0",
+    "postcss-cli": "^9.1.0",
     "rtlcss": "^3.5.0",
-    "viewerjs": "^1.11.6",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-expiration": "^6.6.0",
+    "viewerjs": "^1.10.4",
+    "workbox-cacheable-response": "^6.4.2",
+    "workbox-expiration": "^6.4.2",
     "workbox-precaching": "^6.4.2",
-    "workbox-routing": "^6.6.0",
-    "workbox-strategies": "^6.6.0"
+    "workbox-routing": "^6.4.2",
+    "workbox-strategies": "^6.4.2"
   },
+  "devDependencies": {},
   "name": "hugo-theme-bootstrap-skeleton",
-  "version": "0.1.0",
-  "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "mark.js": "^8.11.1",
-    "postcss": "^8.4.35",
-    "postcss-cli": "^11.0.0"
-  }
+  "version": "0.1.0"
 }
